Fix sidenav vertical overflow

--- a/src/styles/sidenav.scss
+++ b/src/styles/sidenav.scss
@@ -9,6 +9,7 @@
   @apply shadow-md;
   @apply w-full;
   @apply max-h-screen;
+  @apply overflow-y-auto;
 
   li {
     &:first-child {
